			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04w: *********************************

BUG: (8/10/06, SMR) Color chooser patch not always correct (Bug #1198).
FIX: In ColorPatternPanel.setColorPattern() set the preview color.

BUG: (8/10/06, GVG) PostScript Export ignores "instance names" flag (bug #1197)
FIX: Checking if "instance names" is on/off

************************* Version 8.04v: *********************************

BUG: (8/7/06, GVG) auto-stitch exception (Bug #1194) due to refactoring done for AutoStitch and regressions (7/21/06).
FIX: check if lists are null.

IMP: (8/4/06, GVG) Selected layer pattern not highlighted in patterns palette (Bug #1193)
Basic marking done. It might be beneficial to rewrite the pattern selection section.

BUG: (8/3/06, GVG) Exception in LayerDrawing because of null layer in getRaster() (Bug #1191).
This seems due to artwork in layout cells.
FIX: If layer==null in LayerDrawing -> layer = Artwork.tech.defaultLayer. Similar fix with Graphics == null.
     In Technology.getShapeOfArc call setLayer for arrowed arcs.

IMP: (8/3/06, GVG) Different message dialogs in case of XML errors while importing DRC deck. Printing only parser
error in case of problems, not full trace.

IMP: (8/1/06, DN) EditWindow.getBlendingOrder don't put Generic.Gluph layer into blending order on solid layers.
     So essential bounds are not shown. 

IMP: (8/1/06, DN) EditWindow.getBlendingOrder uses LAYERS_BY_HEIGHT_LIFT_CONTACTS to sort layers.
    So every contact is higher than its upper metal. Requested by Jonathan Gainsley.

IMP/MAN: (7/30/06, DN) "Alpha blending limit" preference renamed to "Alpha blending overcolor limit".
    When zooming out below this limit, standard alpha blending composition rule is used.
    When zooming in above this scale, alphablending with overcolor composituin rule (as inMagic editor) is used.
